fixed issue #2: overlapping of footer nav and share element, added some other styling

--- a/assets/styles/styles.less
+++ b/assets/styles/styles.less
@@ -23,7 +23,10 @@ a {
   }
 }
 .row {
-  margin-bottom: 5rem;
+  margin-bottom: 4rem;
+  &:last-of-type {
+    margin-bottom: 15rem;
+  }
 }
 .title {
   font-family: Oswald, 'Times New Roman', serif;
@@ -83,5 +86,8 @@ span {
 .list-group {
   .list-group-item:hover {
     background-color: @lightest;
+  }
+  .list-group-item {
+    border: 1px solid @lightest;
   }
 }
